# Bloomberg

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  INFORME.md  README.md  deploy_cloudflare.sh  explorar_db.py  main.py  pyproject.toml  slides_outline.md  supervisord.conf
app/backend/: main.py
artifacts/: drivers_elastic.csv  drivers_elastic_12m.csv  drivers_elastic_12m_reduced.csv  drivers_elastic_3m.csv  drivers_elastic_3m_reduced.csv  drivers_elastic_6m.csv  drivers_elastic_6m_reduced.csv  drivers_lgbm.csv  drivers_lgbm_12m.csv  drivers_lgbm_12m_reduced.csv  drivers_lgbm_3m.csv  drivers_lgbm_3m_reduced.csv  drivers_lgbm_6m.csv  drivers_lgbm_6m_reduced.csv  fold_diagnostics.csv  fold_diagnostics_12m.csv  fold_diagnostics_12m_reduced.csv  fold_diagnostics_3m.csv  fold_diagnostics_3m_reduced.csv  fold_diagnostics_6m.csv  fold_diagnostics_6m_reduced.csv  horizon_comparison.csv  metrics.json  panel_raw.parquet  scores.parquet  scores_12m.parquet  scores_12m_reduced.parquet  scores_3m.parquet  scores_3m_reduced.parquet  scores_6m.parquet  scores_6m_reduced.parquet  survivorship_fondos.csv  survivorship_stats.json
assets/: README.md
deploy/: deploy_cloudflare.sh  deploy_ec2.sh
docs/: DEPLOYMENT.md  INFORME.md  slides_outline.md
nginx/: default.conf
notebooks/: informe.ipynb  informe.py
scripts/: 01_build_features.py  02_eda_report.py  03_build_features_full.py  04_train_and_evaluate.py  05_build_app_data.py  audit_returns.py  run_all.py
src/: __init__.py  data.py  features.py  metrics.py  model.py  paths.py  splits.py  validation.py
(+22 files in other folders)
