[project]
name = "bloomberg"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.2",
    "numpy>=2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "matplotlib>=3.9",
    "pyarrow>=17",
    "jupyter>=1.1",
    "jupytext>=1.16",
    "ipykernel>=6.29",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]
